# golang-practice

./: dockerfile  go.mod
cmd/: housework.go  housework_func.go
pkg/: main.go
src/: go.mod  go.sum  main.go
src/20221022_echo/: echoServer.go
src/20221115_excel/: excelPractice.go
src/20221121_goroutine/: goroutinePractice.go
src/20221223_cdnImg/: imgBinaryTest.go
src/20230207_smtp/: smtpSendTest.go
src/20230616_aws_dynamodb/: MEMO.md  awsDynamo.go
src/20230616_aws_dynamodb/json/: schema.json
src/20230702_interface_dynamic_parsing/: echoInterface.go
src/20230711_reflect/: reflectPractice.go
src/20230714_timeformat/: timePractice.go
src/20230814_env/: envMain.go
src/20230815_programmers/: HashBastAlbum.go
src/20230828_aws_sdk/: efsConnection.go
src/20230830_aws_cloudwatch/: cloudWatchLog.go
src/20230904_millisecond/: timeParsing.go
src/20230926_map/: mapPractice.go
src/20231218_timeSub/: time_sub.go
src/20231221_map_string_struct/: mapStringStructTest.go
src/20240103_ticker/: tickerPractice.go
src/20240129_channel/: channel.go
src/20240205_reflect/: reflectPractice.go
src/20240207_date_array/: dateArrayPractice.go
src/20240311_long_polling/: longPollingExample.go
src/20240321_grpc/: config.proto  generator.sh  grpcPractice.go
src/20240416_date_range_check/: date_range_check.go
src/20240731_slice/: slice_practice.go
src/20240910_aws_ecs_params/: Dockerfile  build.sh  deploy.sh  ecs_container_override.go
src/20241028_structure/: structureData.go
src/20241108_map_delete/: mapDelete.go
src/20250124_time_range/: time_range.go
src/20250805_rabbitMQ/: consumer.go  new_task.go  producer.go  worker.go
src/20250807_whisper_api/: main.go
src/20250812_barrier_synchronization/: barrier.go
src/20250821_json_file_create/: createFile.go
src/20250822_whisper_optimize/: optimize.go
src/20250917_subtitle_post_proc/: main.go  models.go  trie_node.go
src/20250918_vad_filter/: extractor.go  filter.go  main.go  run.sh  subtitle.go  whisper.go
src/20250924_segment_match/: sample_data.go  segments.go
src/20250930_consumer_connection/: README.md  retry_connection.go  retry_connection_test.go
src/20251014_struct_size/: size_check.go
src/20251028_speech_pad/: main.go  speech_pad.go  vad_filter.go
src/20251028_subtitle_split/: main.go
src/20251106_gemini/: scripts.go
src/20251112_whisper_ver2/: ffmpeg.go  main.go  models.go  subtitle.go  vad.go
src/20251121_n_gram/: gram.go
src/20251212_bazel_test/: .bazelrc  .dockerignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  cgo_darwin.go  cgo_linux.go  go.mod  main.go  onnxruntime.BUILD
src/20251218_audio_chunks/: ffmpeg.go  main.go  models.go  monitor.go  vad.go  whisper.go
src/20251224_rtmp_sample/: Makefile  relay_main.go  server_main.go
src/20251224_rtmp_sample/server/: handler.go  relay_handler.go
src/20260120_scheduler/: main.go  scheduler.go  test_simple.go
src/20260202_scheduler_with_db/: config.go  docker-compose.yml  main.go  repository.go  stt_queue.go
src/Closure/: closureExample.go
src/MySQL/: mysqlExample.go
src/Panic/: panicExample.go
src/Pointer/: PointerObject.go  pointerExample.go
src/ReceiverMethod/: receiverExample.go
src/Revised/: revisedExample.go
src/Serialization/housework/: housework.go
src/Sync/: syncExample.go
src/chat/: chat.go
src/cmd/: main.go
src/common/: db.go  tx.go
src/fileIO/: fileIOexample.go
src/labstack_echo/: echoExample.go
