module(
    name = "vad_filter_test",
    version = "0.1.0",
)

# Bazel dependencies
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "platforms", version = "0.0.11")
# bazel_dep(name = "rules_oci", version = "2.0.0")  # Docker용, 나중에 사용

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.5")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Register all Go dependencies
use_repo(
    go_deps,
    "com_github_streamer45_silero_vad_go",
)

# ============================================
# Docker 관련
# ============================================
# # OCI (Docker) base image
# oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
# oci.pull(
#     name = "distroless_base",
#     digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
#     image = "gcr.io/distroless/base-debian12",
#     platforms = ["linux/amd64", "linux/arm64"],
# )
# use_repo(
#     oci,
#     "distroless_base",
#     "distroless_base_linux_amd64",
#     "distroless_base_linux_arm64",
# )