load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# macOS ARM64용 ONNX Runtime
http_archive(
    name = "onnxruntime_darwin_arm64",
    build_file = "@//:onnxruntime.BUILD",
    strip_prefix = "onnxruntime-osx-arm64-1.18.1",
    urls = [
        "https://github.com/microsoft/onnxruntime/releases/download/v1.18.1/onnxruntime-osx-arm64-1.18.1.tgz",
    ],
)

# macOS x64용 ONNX Runtime
http_archive(
    name = "onnxruntime_darwin_x64",
    build_file = "@//:onnxruntime.BUILD",
    strip_prefix = "onnxruntime-osx-x86_64-1.18.1",
    urls = [
        "https://github.com/microsoft/onnxruntime/releases/download/v1.18.1/onnxruntime-osx-x86_64-1.18.1.tgz",
    ],
)

# Linux x64용 ONNX Runtime
http_archive(
    name = "onnxruntime_linux_x64",
    build_file = "@//:onnxruntime.BUILD",
    strip_prefix = "onnxruntime-linux-x64-1.18.1",
    urls = [
        "https://github.com/microsoft/onnxruntime/releases/download/v1.18.1/onnxruntime-linux-x64-1.18.1.tgz",
    ],
)

# Linux ARM64용 ONNX Runtime
http_archive(
    name = "onnxruntime_linux_arm64",
    build_file = "@//:onnxruntime.BUILD",
    strip_prefix = "onnxruntime-linux-aarch64-1.18.1",
    urls = [
        "https://github.com/microsoft/onnxruntime/releases/download/v1.18.1/onnxruntime-linux-aarch64-1.18.1.tgz",
    ],
)
